pear mail error

--- a/static/style.css
+++ b/static/style.css
@@ -115,6 +115,9 @@ h2 {
   background-color: rgba(216, 187, 171, 0.788);
   
 }
+.asign3 {
+  background-color: rgba(71, 90, 105, 0.788);
+}
 form {
   margin: 0;
 }
